src/styles/_catalog.scss
.catalog {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 48px;
  flex-wrap: wrap;

  max-width: 944px;
  margin: 0 auto;

  &__card {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 300px;
    border: 1px solid #ccc;
    border-radius: 5px;
    margin-bottom: 48px;
  }

  &__card:not(:nth-child(4n)) {
    margin-right: 48px;
  }
}

@media (max-width: 1023px) {
  .catalog {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media (max-width: 767px) {
  .catalog {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
}

@media (max-width: 487px) {
  .catalog {
    display: grid;
    grid-template-columns: 1fr;
  }
}

